ilo added, bugs fixed, swagger inteface modified
