# modules_api/Term.py
@@ -21,6 +21,7 @@ class Term:
     wikidata_id=""
     thesoz_id=""
     stw_id=""
+    ilo_id=""
     context=""
     schema=""
     frequency=""
@@ -43,6 +44,9 @@ class Term:
     definitions_stw={}
     translations_stw={}
     synonyms_stw=[]
+    definitions_ilo={}
+    translations_ilo={}
+    synonyms_ilo=[]
     start=0
     end=0
     index_max=0
@@ -62,8 +66,53 @@ class Term:
     wikidata_vectors={}
     
     def __init__(self):
-        self.term='term'
-        self.lang='lang'
+        self.term=""
+        self.langIn=""
+        self.translations_iate= {}
+        self.langOut=[]
+        self.source=""
+        self.iate_id=""
+        self.eurovoc_id=""
+        self.unesco_id=""
+        self.wikidata_id=""
+        self.thesoz_id=""
+        self.stw_id=""
+        self.ilo_id=""
+        self.context=""
+        self.schema=""
+        self.frequency=""
+        self.jurisdiction=""
+        self.translations_iate={}
+        self.definitions_iate={}
+        self.synonyms_iate=[]
+        self.translations_eurovoc={}
+        self.definitions_eurovoc={}
+        self.synonyms_eurovoc=[]
+        self.translations_unesco={}
+        self.definitions_unesco={}
+        self.synonyms_unesco=[]
+        self.translations_wikidata={}
+        self.definitions_wikidata={}
+        self.synonyms_wikidata=[]
+        self.definitions_thesoz={}
+        self.translations_thesoz={}
+        self.synonyms_thesoz=[]
+        self.definitions_stw={}
+        self.translations_stw={}
+        self.synonyms_stw=[]
+        self.definitions_ilo={}
+        self.translations_ilo={}
+        self.synonyms_ilo=[]
+        self.start=0
+        self.end=0
+        self.index_max=0
+        self.best_item_id=0
+        self.eurovoc_relations={}
+        self.unesco_relations={}
+        self.wikidata_relations={}
+        self.thesoz_relations={}
+        self.stw_relations={}
+        self.ilo_relations={}
 
 
 
